Fix responsiveness on small viewports

--- a/css/screen.sass
+++ b/css/screen.sass
@@ -16,16 +16,13 @@ strong
 
 #wrapper
   margin: 0 auto
-  width: 630px
+  max-width: 630px
 
 header, #content
   text-align: left
 
 header
-  position: relative
-  height: 58px
-  vertical-align: baseline
-  margin-bottom: 1.6em
+  margin-bottom: 32px
   padding-top: 18px
   border: 0
   border-top: 8px solid #8EACCC
@@ -36,21 +33,17 @@ header
     color: #787878
     border: none
     display: inline-block
+    margin-bottom: 8px
 
   a#masthead span
     color: #505050
 
-  a#masthead:hover
-    border-bottom: 2px solid $link_color
-
   ul.navigation
-    text-align: right
     margin: 0
     list-style-type: none
 
     li
       display: inline-block
-      margin: 0 0 0 20px
 
     .fa
       vertical-align: middle
